Fixed styling for play page on smaller sceen sizes

--- a/src/GosuArena/GosuArena/Content/Pages/Match/Play.less
+++ b/src/GosuArena/GosuArena/Content/Pages/Match/Play.less
@@ -74,3 +74,17 @@ menu.actions {
     display: inline-block;
     float: right;
 }
+
+@media only screen and (max-width: 1200px) {
+    #botLegends {
+        display: none;
+    }
+
+    header {
+        display: none;
+    }
+
+    #playing-field {
+        margin-top: 50px;
+    }
+}
